--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,61 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use "~@angular/material" as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$team-productivity-app-primary: mat.define-palette(mat.$blue-grey-palette);
+$team-productivity-app-accent: mat.define-palette(
+  mat.$indigo-palette,
+  A200,
+  A100,
+  A400
+);
+
+// The warn palette is optional (defaults to red).
+$team-productivity-app-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$team-productivity-app-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $team-productivity-app-primary,
+      accent: $team-productivity-app-accent,
+      warn: $team-productivity-app-warn,
+    ),
+  )
+);
+
+// @include mat.core-theme($team-productivity-app-theme);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($team-productivity-app-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap");
+
+* {
+  font-family: "Roboto Mono", monospace;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
