Removed meta tags

--- a/src/app/customers/detail-page/detail-page.component.html
+++ b/src/app/customers/detail-page/detail-page.component.html
@@ -14,7 +14,7 @@
 </mat-card>
 
 
-<mat-card>
+<!-- <mat-card>
     <p>
       This content is server rendered with Angular Universal, NestJS, and Google
       Cloud Run.
@@ -31,4 +31,4 @@
       >Twitter Card Validator</a
     >
   
-  </mat-card>
+  </mat-card> -->
